refactor to respond with dto